Closed Bug 338368 Opened 19 years ago Closed 19 years ago

Uninitialized in nsTextFrame::PaintAsciiText (layout/generic/nsTextFrame.cpp)

Categories

(Core :: Layout, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: kherron+mozilla, Assigned: asqueella)

References

(Blocks 1 open bug, )

Details

(Keywords: coverity, crash)

Attachments

(1 file)

This is coverity CID 380. Please see the sample URL. |details| is used uninitialized if If |GetContentAndOffsetsForSelection| fails. I don't know if that's really possible, but similar code at line 2806 initializes |details| to nsnull when it's defined.
Whiteboard: [good first bug]
Assignee: nobody → asqueella
Status: NEW → ASSIGNED
Attachment #230376 - Flags: superreview?(roc)
Attachment #230376 - Flags: review?(roc)
Attachment #230376 - Flags: superreview?(roc)
Attachment #230376 - Flags: superreview+
Attachment #230376 - Flags: review?(roc)
Attachment #230376 - Flags: review+
Whiteboard: [good first bug] → [checkin needed]
mozilla/layout/generic/nsTextFrame.cpp 1.585
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: [checkin needed]
Target Milestone: --- → mozilla1.9alpha
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: