Bug 338368: fix uninitialized variable used in nsTextFrame::PaintAsciiText, patch by Nickolay Ponomarev <asqueella@gmail.com>, r+sr=roc